# mcp-cli-chat

./: README.md  mcp_client.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_mcp_client.py  test_mcp_server.py
